--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="btnLogin">Login</string>
     <string name="btnRegister">Register</string>
     <string name="btnForgotPassword">Forgot Password</string>
+    <string name="hntReEnterPassword">Re-enter Password</string>
+    <string name="btnSend">Send</string>
+    <string name="btnSave">Save</string>
+    <string name="btnCancel">Cancel</string>
+    <string name="htnEmail">Enter Email</string>
 </resources>
